# tesseract-ocr

./: COPYING  ChangeLog  Makefile.am  Makefile.in  README  ReleaseNotes  aclocal.m4  configure  configure.ac  tesseract.dsp  tesseract.dsw
aspirin/: Makefile.am  Makefile.in  aspirin_bp.h  bpsim.cpp  bpsim.h  bpsupport.cpp  bpsupport.h  header.h  nmatch.cpp  nmatch.h  vanilla.cpp  vanilla.h
ccmain/: Makefile.am  Makefile.in  adaptions.cpp  applybox.cpp  applybox.h  blobcmp.cpp  callnet.cpp  charcut.cpp  charsample.cpp  control.cpp  expandblob.cpp  matmatch.cpp  reject.cpp  reject.h  tessbox.cpp  tessedit.cpp  tessedit.h  tesseractmain.cpp  tesseractmain.h  tfacepp.cpp  tstruct.cpp
ccstruct/: Makefile.in  blobbox.cpp  blobbox.h  blobs.cpp  blread.cpp  callcpp.cpp  coutln.cpp  coutln.h  crakedge.h  lmedsq.cpp  ocrrow.cpp  ocrrow.h  pageblk.cpp  pdblock.cpp  polyblk.cpp  polyblob.cpp  poutline.cpp  quspline.cpp  quspline.h  rect.cpp  rect.h  statistc.cpp  stepblob.cpp  vecfuncs.cpp  werd.cpp
ccutil/: Makefile.am  Makefile.in  clst.cpp  clst.h  debugwin.cpp  elst.cpp  elst.h  elst2.cpp  elst2.h  getopt.cpp  getopt.h  host.h  memblk.cpp  memry.cpp  ocrclass.h  platform.h  serialis.cpp  strngs.h  tprintf.cpp  varable.cpp
classify/: Makefile.in  adaptive.cpp  adaptmatch.cpp  chartoname.cpp  cluster.cpp  clusttool.cpp  clusttool.h  cutoffs.cpp  featdefs.cpp  (+21 more)
cutil/: Makefile.am  Makefile.in  bitvec.h  const.h  cutil.cpp  cutil.h  freelist.cpp  listio.cpp  listio.h  oldheap.h  oldlist.cpp  oldlist.h  structures.h  tordvars.cpp  util.cpp  util.h  variables.cpp  variables.h
(+71 files in other folders)
